Update db configs and initial query

--- a/db/conf.d/my.cnf
+++ b/db/conf.d/my.cnf
@@ -1,9 +1,8 @@
+# MySQL8 default character set는 utf8mb4 이므로 client만 선언합니다.
 [client]
 default-character-set = utf8mb4
 
-[mysql]
-default-character-set = utf8mb4
-
+# MySQL8 default authentication policy는 `caching_sha2_password`입니다.
+# 이를 지원하지 않는 DB Client로 접속하기 위해서는 기존 정책인 `mysql_native_password`로 설정합니다.
 [mysqld]
-character-set-server  = utf8mb4
-collation-server      = utf8mb4_unicode_ci
+authentication-policy = mysql_native_password
