--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 # https://hub.docker.com/_/mysql
 
-version: "3.8"
-services:
-  mysql:
+version: "3.8"                                    # docker-compose 파일 버전입니다.
+services:                                         # 서비스들을 선언합니다.
+  mysql:                                          # 서비스명을 선언합니다.
     container_name: mysql_local
     image: mysql:8.0.30
-    volumes:                                      # 볼륨설정, 호스트:컨테이너
-      - ./db/conf.d:/etc/mysql/conf.d             # MySQL 설정
-      - ./db/initdb.d:/docker-entrypoint-initdb.d # 테이블 create, insert
-    ports:                                        # 외부로 노출시킬 port
+    volumes:                                      # {호스트}:{컨테이너}
+      - ./db/conf.d:/etc/mysql/conf.d             # MySQL 설정 파일이 있습니다.
+      - ./db/initdb.d:/docker-entrypoint-initdb.d # sh, sql을 파일명 알파벳순으로 수행합니다. 테이블 create, insert 쿼리 파일이 들어있습니다.
+    ports:                                        # 외부로 노출시킬 port 입니다.
       - "3306:3306"
     environment:                                  # 환경 변수
       - MYSQL_DATABASE=pass_local
       - MYSQL_USER=pass_local_user
-      - MYSQL_PASSWORD=PassLocal12#
-      - MYSQL_ROOT_PASSWORD=PassLocal12#
+      - MYSQL_PASSWORD=passlocal123
+      - MYSQL_ROOT_PASSWORD=passlocal123
       - TZ=Asia/Seoul
