--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
+	implementation 'org.springframework.batch:spring-batch-integration' // AsyncItemProcessor, AsyncItemWriter
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor" // @ConfigurationProperties
 
 	// mysql
 	runtimeOnly 'mysql:mysql-connector-java'
