--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	// hibernate-types
 	implementation 'com.vladmihalcea:hibernate-types-52:2.19.2'
 
+	// csv
+	implementation 'com.opencsv:opencsv:5.7.0'
+
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
 	testCompileOnly 'org.projectlombok:lombok'
