--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,13 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
 	// hibernate-types
-	implementation 'com.vladmihalcea:hibernate-types-52:2.21.1'
+	implementation 'com.vladmihalcea:hibernate-types-60:2.21.1'
 
 	// csv
 	implementation 'com.opencsv:opencsv:5.9'
 
-	testImplementation "org.testcontainers:testcontainers:1.19.3"
+	testImplementation 'org.testcontainers:testcontainers:1.19.3'
+	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
 	implementation platform('org.testcontainers:testcontainers-bom:1.19.3')
 	testImplementation('org.testcontainers:mysql')
 
@@ -45,9 +46,6 @@ dependencies {
 	testImplementation 'org.springframework.batch:spring-batch-test'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
-	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-	testImplementation 'org.apache.commons:commons-lang3:3.12.0'
-
 }
 
 /* JUnit 5를 기본적으로 지원
